Use Java 17 compatible image loader thread